<resources>
    <string name="app_name">РЦОКО27</string>
    <string name="e_mail">Введите e-mail</string>
    <string name="your_name">Ваше имя</string>
    <string name="registration">Регистрация</string>
    <string name="rcoko">РЦОКО</string>
    <string name="input_code_from_email">Код полученный на e-mail</string>
    <string name="need_specify_data">Нужно указать e-mail и имя</string>
    <string name="need_specify_email">Нужно указать e-mail</string>
    <string name="need_specify_auth_data">Нужно указать e-mail и пароль</string>
    <string name="contains_email">Такой e-mail уже зарегистрирован</string>
    <string name="unknow_error">Что-то пошло не так</string>
    <string name="invalid_code_range">Неверная длина кода</string>

    <string name="error_code">Неверный код</string>
    <string name="next">Далее</string>
    <string name="input_password">Введите пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="code_sended_to_email">Код отправлен на указанный электронный адрес</string>
    <string name="select_role">Выберите роль</string>
    <string name="student">Ученик</string>
    <string name="parent">Родитель</string>
    <string name="worker">Работник образования</string>
    <string name="short_pass">Пароль должен содержать не менее 8 символов</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="all_ok">Все хорошо</string>
    <string name="not_connection">Проблемы с подключением</string>
    <string name="sign_in">Вход</string>
    <string name="auth">Авторизация</string>
    <string name="no_auth">Неверное имя пользователя или пароль</string>
    <string name="again">Заново</string>
    <string name="events">События</string>
    <string name="load">Загрузка…</string>
    <string name="messages">Сообщения</string>
    <string name="voting">Опросы</string>
    <string name="vote">Голосовать</string>
    <string name="not_avaible">Пока не доступно</string>
    <string name="to">to: %s</string>
    <string name="error_get_data">Обшибка при получении данных</string>
    <string name="my_activities">Мои активности</string>
    <string name="sorry">Извините. Вкладка пока недоступна.</string>
    <string name="message_info">Вы учавствовали в обсуждении этой новости (отправили %s)</string>
    <string name="exit">Выйти</string>
    <string name="view">Просмотр</string>
    <string name="format_error">Ошибка формата ответа</string>
    <string name="text_of_message">Текст сообщения</string>
    <string name="reset_the_password"><u>Сбросить пароль</u></string>
    <string name="reset_password">Сброс пароля</string>
    <string name="showed_name">Отображаемое имя</string>
    <string name="save">Сохранить</string>
    <string name="settings">Настройки</string>
    <string name="not_valid_email">Не корректный e-mail</string>
    <string name="edited_text">Измененный текст</string>
    <string name="edit_text">Редактирование сообщения</string>
    <string name="edit">Изменить</string>
    <string name="cancel">Отмена</string>
    <string name="event">Событие</string>
    <string name="discussion">Обсуждение</string>
    <string name="no_one_voting">У события нет ни одного опроса</string>

    <plurals name="pl_messages">
        <item quantity="zero">сообщений</item>
        <item quantity="one">%d сообщение</item>
        <item quantity="two">%d сообщения</item>
        <item quantity="few">%d сообщений</item>
        <item quantity="many">%d сообщений</item>
        <item quantity="other">%d сообщений</item>
    </plurals>

    <string-array name="actions_delete">
        <item>Удалить</item>
    </string-array>

    <string-array name="actions_delete_edit">
        <item>Изменить</item>
        <item>Удалить</item>
    </string-array>
</resources>
