<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin">

    <TextView
            android:id="@+id/view_user_name"
            android:text="@string/showed_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text18"
            android:textColor="@color/colorAccent"/>
    <ImageView
            android:id="@+id/image_verification"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_verification"
            android:layout_alignParentEnd="true"/>

    <EditText
            android:id="@+id/text_user_name"
            android:textSize="@dimen/text20"
            android:layout_below="@id/view_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding"
            android:layout_marginTop="@dimen/mini_padding"/>

    <TextView
            android:id="@+id/view_role"
            android:text="@string/select_role"
            android:layout_below="@id/text_user_name"
            android:textSize="@dimen/text18"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <android.support.design.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_role"
            android:layout_margin="@dimen/padding"
            app:singleSelection="true">

        <android.support.design.chip.Chip
                android:id="@+id/chip_student"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:checked="true"
                android:enabled="false"
                android:paddingStart="@dimen/mini_padding"
                android:paddingEnd="@dimen/mini_padding"
                android:layout_marginStart="@dimen/mini_padding"/>
        <android.support.design.chip.Chip
                android:id="@+id/chip_parent"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent"
                android:paddingStart="@dimen/mini_padding"
                android:paddingEnd="@dimen/mini_padding"
                android:layout_marginStart="@dimen/mini_padding"/>
        <android.support.design.chip.Chip
                android:id="@+id/chip_worker"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worker"
                android:paddingStart="@dimen/mini_padding"
                android:paddingEnd="@dimen/mini_padding"
                android:layout_marginStart="@dimen/mini_padding"/>
    </android.support.design.chip.ChipGroup>

    <Button
            android:id="@+id/button_save"
            android:background="@drawable/background_button"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:padding="@dimen/padding"
            style="?attr/buttonStyle"
            android:textColor="@color/colorTextAlt"/>
</RelativeLayout>