<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/text18"
            android:textColor="@color/colorAccent"
            android:text="@string/registration"/>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/rcoko27"
            android:background="@android:color/transparent"/>

    <TextView
            android:id="@+id/label_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:text="@string/select_role"
            android:textColor="@color/colorText"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:textSize="@dimen/text18"
            android:layout_marginBottom="@dimen/padding"/>

    <android.support.design.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_role"
            android:layout_margin="@dimen/padding"
            app:singleSelection="true">

        <android.support.design.chip.Chip
                android:id="@+id/chip_student"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:checked="true"
                android:enabled="false"
                android:paddingStart="@dimen/mini_padding"
                android:paddingEnd="@dimen/mini_padding"
                android:layout_marginStart="@dimen/mini_padding"/>
        <android.support.design.chip.Chip
                android:id="@+id/chip_parent"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent"
                android:paddingStart="@dimen/mini_padding"
                android:paddingEnd="@dimen/mini_padding"
                android:layout_marginStart="@dimen/mini_padding"/>
        <android.support.design.chip.Chip
                android:id="@+id/chip_worker"
                style="@style/ChipTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worker"
                android:paddingStart="@dimen/mini_padding"
                android:paddingEnd="@dimen/mini_padding"
                android:layout_marginStart="@dimen/mini_padding"/>
    </android.support.design.chip.ChipGroup>

    <Button
            android:id="@+id/button_reg"
            android:background="@drawable/background_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin"
            android:layout_below="@id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="regTransition"
            android:text="@string/registration"
            android:padding="@dimen/padding"
            style="?attr/buttonStyle"
            android:textColor="@color/colorTextAlt"/>


</RelativeLayout>