<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/text18"
            android:textColor="@color/colorAccent"
            android:text="@string/auth"/>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/rcoko27"
            android:background="@android:color/transparent"/>

    <android.support.design.widget.TextInputLayout
            android:layout_below="@id/logo"
            android:id="@+id/layout_email"
            android:padding="@dimen/padding"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/text_email"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:gravity="top"
                android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_below="@id/layout_email"
            android:id="@+id/layout_password"
            android:padding="@dimen/padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/text_password"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:gravity="top"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/button_sign_in"
            style="?attr/buttonStyle"
            android:background="@drawable/background_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/sign_in"
            android:transitionName="authTransition"
            android:textColor="@color/colorTextAlt"/>

</RelativeLayout>