<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/text18"
            android:textColor="@color/colorAccent"
            android:text="@string/reset_password"/>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/rcoko27"
            android:background="@android:color/transparent"/>

    <android.support.design.widget.TextInputLayout
            android:layout_below="@id/logo"
            android:id="@+id/layout_email"
            android:padding="@dimen/padding"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/text_email"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:maxLines="1"
                android:gravity="top"
                android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>


    <Button
            android:id="@+id/button_next"
            android:background="@drawable/background_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin"
            android:layout_below="@id/layout_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="regTransition"
            android:text="@string/next"
            android:padding="@dimen/padding"
            style="?attr/buttonStyle"
            android:textColor="@color/colorTextAlt"/>

</RelativeLayout>