<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/text_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin"
            android:textSize="@dimen/text18"
            android:textColor="@color/colorAccent"
            android:text="@string/sign_in"/>

    <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:src="@drawable/rcoko27"
            android:background="@android:color/transparent"/>

    <ProgressBar
            android:id="@+id/progress_bar"
            android:theme="@style/CircularProgress"
            android:visibility="visible"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/logo"
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <Button
            android:visibility="invisible"
            android:id="@+id/button_again"
            style="?attr/buttonStyle"
            android:background="@drawable/background_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/again"
            android:textColor="@color/colorTextAlt"/>

    <Button
            android:visibility="invisible"
            android:id="@+id/button_reg"
            style="?attr/buttonStyle"
            android:background="@drawable/background_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_again"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/registration"
            android:textColor="@color/colorTextAlt"/>

</RelativeLayout>